Modified README file and style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background-image: url("C:/Users/Hassan/Desktop/unit-4-game/assets/images/Background.jpg");
+    background-image: url("https://github.com/atiftariq786/unit-4-game/blob/master/assets/images/Background.jpg?raw=true");
     height: 400px;
     width: 960px;
 }
